fixed dark mode elements

--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -56,6 +56,22 @@ body.dark-mode a {
   color: #ffffff;
 }
 
+body.dark-mode hr {
+  color: #ffffff;
+}
+
+body.dark-mode button {
+  color: #ffffff;
+}
+
+body.dark-mode #myBtn {
+  color: white; /* Light text color */
+}
+
+/* Hover effect for the button in dark mode */
+body.dark-mode #myBtn:hover {
+  background-color: #9ECAE7;
+}
 
 
 h1{
